added new feature to nav

--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
 				</a>
 				<div class="overlay-content">
 					<ul id="hList">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#showcase">showcase</a></li>
-					<li><a href="#services">services</a></li>
-					<li><a href="#designers">designers</a></li>
-					<li><a href="#contact">contact</a></li>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#showcase">showcase</a></li>
+						<li><a href="#services">services</a></li>
+						<li><a href="#designers">designers</a></li>
+						<li><a href="#contact">contact</a></li>
 					</ul>
 				</div>
 			</nav>
 			<span class="open" onclick="openNa()"> &#9776; </span>
 		</header>
+		<main>
+			<h2 class="main__logo">Interior Design</h2>
+		</main>
 		<script src="./app..js"></script>
 	</body>
 </html>
