--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Interior-decoration</title>
 		<link rel="stylesheet" href="./styles.css" />
+		<link rel="shortcut icon" href="./images/images (5).jpg" type="image/x-icon">
 	</head>
 	<body>
 		<header id="home">
